[package]
name = "tutorial_rest_api_su"
version = "0.1.0"
authors = ["Leon <yanglyu.leon.7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
diesel = { version = "1.4.5", features = ["uuidv07", "r2d2", "postgres"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.2", features = ["v4", "serde"] }